working on stylling right half

--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
 
 <body>
     <div id="left-section">
-        <div id="backsplash">
-            <div id="logo"></div>
-            <div id="img-att"></div>
+        <img src="img/plant.jpg" id="backsplash">
+        <div id="logo-header">
+            <img src="img/odin-lined.png" id="logo">
+            <p id="logo-txt">ODIN</p>
+        </div>
+        <div id="img-att">
+            Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on Unsplash
         </div>
     </div>
-    <div id="right=section">
+    </div>
+    </div>
+    <div id="right-section">
         <div id="cta">
-            <p>This is not a real service! You know you need something like this in your life to help you realize your
-                deepest dreams.</p>
-            <p>Sign up <i>now</i> to get started</p>
-            <p>You <i>know</i> you want to.</p>
+            <p class="cta-font">This is not a real service! You know you need something like this in your life to help
+                you realize your
+                deepest dreams. <br>Sign up <i>now</i> to get started</p>
+            <p class="cta-font">You <i>know</i> you want to.</p>
         </div>
         <div id="fillable-forms">
             <p>Let's do this!</p>
@@ -32,11 +38,11 @@
                     </div>
                     <div>
                         <label for="email">Email:</label>
-                        <input type="text" name="email" id="email">
+                        <input type="email" name="email" id="email">
                     </div>
                     <div>
                         <label for="password">Password:</label>
-                        <input type="text" name="password" id="password">
+                        <input type="password" name="password" id="password">
                     </div>
                 </div>
                 <div class="forms">
@@ -50,7 +56,7 @@
                     </div>
                     <div>
                         <label for="password_conf">Confirm Password:</label>
-                        <input type="text" name="password_conf" id="password_conf">
+                        <input type="password" name="password_conf" id="password_conf">
                     </div>
                 </div>
             </form>
